--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,19 +1,183 @@
 .banner-principal-decorativo
   &-1
-    animation: float1 3.5s ease-in-out infinite alternate
+    animation: float2 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 76%
+    right: 53%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 72%
+    right: 33%
+    
+  &-3
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 57%
+    right: 63%
+  &-4
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 17%
+    right: 26%
+  &-5
+    animation: float2 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 13%
+    right: 63%
+  &-6
+    animation: float2 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 47%
+    right: 24%
+  &-7
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 32%
+    right: 75%
 
 
 @keyframes float1
   0%
     transform: translateY(20px)
-
   100%
     transform: translateY(0px)
+@keyframes float2
+  0%
+    transform: translateX(20px)
+  100%
+    transform: translateX(0px)
+.banner-interno__fondo
+  background-image: url("../assets/curso/portada/fondo_interno.svg") !important
+  background-repeat: no-repeat
+  background-color: $color-acento-contenido !important
+.banner-principal__componente
+  em
+    color: $color-acento-botones
+  h1
+    color: $color-sistema-texto
+.banner-principal__info
+  width: 600px
+  background-image: url("../assets/curso/portada/banner-principal-decorativo.svg")
+  align-self: stretch
+  background-repeat: no-repeat
+  background-position: 15% 1%, 17% 76%
+  background-size: 50%, 25%
+  animation: Flitp1 6s ease infinite
+  margin-top: 30px
+  @media screen and (max-width: $bp-max-lg)
+    width: 560px
+  @media screen and (max-width: $bp-max-md)
+    width: 100%
+  @media screen and (max-width: $bp-max-xs)
+    background-image: none
+    padding-top: 2rem !important 
+   
+@keyframes Flitp1
+  0%
+    background-image: url("../assets/curso/portada/banner-principal-decorativo.svg")
+  50%
+    background-image: url("../assets/curso/portada/banner-principal-decorativo.svg")
+    background-position: 36% 1%, 25% 80%
+      
+  100%
+    background-image: url("../assets/curso/portada/banner-principal-decorativo.svg")
+.banner-interno__titulo
+  h2
+    color: $color-sistema-texto !important
+//COLOR TEXTO//
+.colr
+  color: $color-acento-contenido
+  &_1
+    color: #777777
+//FONDOS//
+.bgr
+  background-color: white
+//FONDOS COMPLETOS DE CONTENIDO//
+.bg_grad-01
+  position: relative
+  .row, p
+    position  : relative
+  &::before
+    content: ''
+    position: absolute
+    margin: 0    
+    top: -3%
+    left: 12%
+    width: 90%
+    height: calc(100% + 11px)
+    background-color: #6B8DFC
+    border-radius: 20px
+    @media (max-width: $bp-max-xs)
+      top: -2%
+      height: 79%
+    @media (max-width: 426px)
+      height: 87%
+.bg_grad-02
+  position: relative
+  .row, p
+    position  : relative
+  &::before
+    content: ''
+    position: absolute
+    margin: 0 -3rem   
+    top: -5%
+    left: 0
+    width: calc(100% + 6rem)
+    height: 70%
+    background-image: url("../assets/curso/introduccion/fondo1.svg")
+    background-repeat: no-repeat
+    background-size: cover
+    @media (max-width: $bp-max-xs)
+      top: -2%
+      height: 79%
+    @media (max-width: 426px)
+      height: 87%
+.bg_grad-03
+  position: relative
+  .row, p
+    position  : relative
+  &::before
+    content: ''
+    position: absolute
+    margin: 0    
+    top: -3%
+    left: 15%
+    width: 88%
+    height: calc(100% + 11px)
+    background-color: white
+    border-radius: 20px
+    @media (max-width: $bp-max-xs)
+      top: -2%
+      height: 79%
+    @media (max-width: 426px)
+      height: 87%
+//POSISION PANTALLA//
+.pst
+  position: absolute
+  top: 0
+  right: -30px
+  width: 70px
+  &_1
+    position: absolute
+    bottom: -20px
+    left: 35%
+    width: 83px
+
+
+//MARGEN//
+.mgt
+  margin-top: 100px
+//CLASES REEMPLAZADAS//
+.traduccionAudio__chat__item__message__bubble
+  background-color: #DDDEFF !important
+  padding: 2em !important
+  i
+    color: $color-secundario
+.traduccionAudio__chat__item__message__text__eng.textAudio__ing
+  span
+    font-weight: 400 !important
+.textAudio__esp 
+  color: #777777 !important
+.horizontal-scroll
+  align-items: stretch !important
