--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -536,3 +536,6 @@
   background-color: #E1E8FF !important
   &::before
     background-color: #E1E8FF !important
+.slyder-a__btn--sigt, .slyder-a__btn--atrs
+  background-color: #3C3FA7
+  background-image: url("../assets/componentes/arrow1.svg")
