--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -490,6 +490,9 @@
     top: 29%
     left: 0
     width: 83px
+  &_8
+    .traduccionAudio__chat__item__message__translate-btn
+      display: none
 
 ///////////// CUSTOM LINEA DE TIEMPO D
 .linea-tiempo-d__item.row.linea-tiempo-d__item--selected
