--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -182,9 +182,10 @@
     background-image: url("../assets/curso/introduccion/fondo1.svg")
     background-repeat: no-repeat
     background-size: cover
+    @media (max-width: $bp-max-md)
+      height: 90%
     @media (max-width: $bp-max-xs)
-      top: -2%
-      height: 79%
+      height: 90%
     @media (max-width: 426px)
       height: 87%
 .bg_grad-03
@@ -201,11 +202,18 @@
     height: calc(100% + 11px)
     background-color: white
     border-radius: 20px
+    @media (max-width: $bp-max-md)
+      top: -2%
+      height: calc(100% + 2rem)
+      left: -5%
+      width: calc(100% + 4rem)
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 11px)
+      left: -3%;
+      width: calc(100% + 2rem);
     @media (max-width: 426px)
-      height: 87%
+      height: 100%
 .bg_grad-04
   position: relative
   .row, p
@@ -223,9 +231,9 @@
     background-size: cover
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 6rem)
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-05
   position: relative
   .row, p
@@ -240,6 +248,10 @@
     height: 66%
     background-color: #3C3FA7
     border-radius: 20px
+    @media (max-width: $bp-max-md)
+      top: -2%
+      left: -2%
+      width: calc(100% + 2rem)
     @media (max-width: $bp-max-xs)
       top: -2%
       height: 79%
@@ -262,7 +274,7 @@
       top: -2%
       height: 79%
     @media (max-width: 426px)
-      height: 87%
+      height: 93%
 .bg_grad-07
   position: relative
   .row, p
@@ -271,16 +283,19 @@
     content: ''
     position: absolute
     margin: 0 -3rem   
-    top: 42%
+    top: 31%
     left: 0
     width: calc(100% + 6rem)
-    height: 66%
+    height: 74%
     background-color: #C4D1FF
+    @media (max-width: $bp-max-md)
+      top: 22%
+      height: 80%
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 3rem)
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-08
   position: relative
   .row, p
@@ -296,9 +311,9 @@
     background-color: #FFF7DA
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 4rem)
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-09
   position: relative
   .row, p
@@ -318,7 +333,7 @@
       top: -2%
       height: 79%
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-10
   position: relative
   .row, p
@@ -333,11 +348,14 @@
     height: calc(100% + 1.5rem)
     background-color: #3C3FA7
     border-radius: 20px
+    @media (max-width: $bp-max-md)
+      left: -4%
+      width: calc(100% + 3rem)
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: 100%
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-11
   position: relative
   .row, p
@@ -356,8 +374,7 @@
     @media (max-width: $bp-max-xs)
       top: -2%
       height: 79%
-    @media (max-width: 426px)
-      height: 87%
+   
 .bg_grad-12
   position: relative
   .row, p
@@ -373,11 +390,14 @@
     background-image: url("../assets/curso/tema2/fondo1.svg")
     background-repeat: no-repeat
     background-size: cover
+    @media (max-width: $bp-max-md)
+      top: -3%
+      height: calc(100% + 5rem)
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 4rem)
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-13
   position: relative
   .row, p
@@ -393,9 +413,9 @@
     background-color: #DDDEFF
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 4rem)
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-14
   position: relative
   .row, p
@@ -411,9 +431,9 @@
     background-color: #E1E8FF
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 4rem)
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-15
   position: relative
   .row, p
@@ -429,11 +449,14 @@
     background-image: url("../assets/curso/tema5/fondo1.svg")
     background-repeat: no-repeat
     background-size: cover
+    @media (max-width: $bp-max-md)
+      top: -8%
+      height: calc(100% + 5rem)
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 4rem)
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 .bg_grad-16
   position: relative
   .row, p
@@ -447,11 +470,14 @@
     width: calc(100% + 6rem)
     height: 66%
     background-color: #FFE891
+    @media (max-width: $bp-max-md)
+      top: 26%
+      height: 77%
     @media (max-width: $bp-max-xs)
       top: -2%
-      height: 79%
+      height: calc(100% + 4rem)
     @media (max-width: 426px)
-      height: 87%
+      height: calc(100% + 3rem)
 
 //POSISION PANTALLA//
 .pst
