--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -85,6 +85,10 @@
 .banner-interno__titulo
   h2
     color: $color-sistema-texto !important
+.banner-interno__titulo__icono
+  i
+    &::before
+      color: white !important
 //COLOR TEXTO//
 .colr
   color: $color-acento-botones
