--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -78,7 +78,7 @@ $color-btn-fondo: $color-acento-botones
 $color-btn-texto: white
 
 // Colores banner --------------------------------------
-$color-banner-fondo: $color-primario
+$color-banner-fondo: #ADC1FE
 $color-banner-text: $color-sistema-texto
 
 // Colores anexos
